--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "grunt-contrib-jshint": "~0.1.1",
     "grunt-contrib-clean": "~0.4.0",
     "grunt-contrib-nodeunit": "~0.1.2",
-    "grunt": "~0.4.0rc7"
+    "grunt": "~0.4.0rc7",
+    "Faker": "~0.5.8"
   },
   "keywords": [
     "gruntplugin"
