--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
   "scripts": {
     "test": "grunt test"
   },
+  "dependencies": {
+    "Faker": "~0.5.8"
+  },
   "devDependencies": {
     "grunt-contrib-jshint": "~0.1.1",
     "grunt-contrib-clean": "~0.4.0",
     "grunt-contrib-nodeunit": "~0.1.2",
-    "grunt": "~0.4.0rc7",
-    "Faker": "~0.5.8"
+    "grunt": "~0.4.0rc7"
   },
   "keywords": [
     "gruntplugin"
