--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "node": ">= 0.8.0"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt"
   },
   "dependencies": {
     "Faker": "~0.5.8"
@@ -37,6 +37,8 @@
     "grunt": "~0.4.0rc7"
   },
   "keywords": [
+    "faker",
+    "fakerjs",
     "gruntplugin"
   ]
 }
