--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
     "test": "grunt"
   },
   "dependencies": {
-    "Faker": "~0.5.8"
+    "Faker": "~0.7.0"
   },
   "devDependencies": {
-    "grunt-contrib-jshint": "~0.1.1",
-    "grunt-contrib-clean": "~0.4.0",
-    "grunt-contrib-nodeunit": "~0.1.2",
-    "grunt": "~0.4.0rc7"
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-nodeunit": "~0.3.3",
+    "grunt": "~0.4.4"
   },
   "keywords": [
     "faker",
