--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
   "devDependencies": {
     "grunt-contrib-jshint": "~0.1.1",
     "grunt-contrib-clean": "~0.4.0",
-    "grunt-contrib-nodeunit": "~0.1.2",
-    "grunt": "~0.4.0rc7"
+    "grunt-contrib-nodeunit": "^0.3.3",
+    "grunt": "^0.4.4"
   },
   "keywords": [
     "faker",
