--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   ],
   "main": "Gruntfile.js",
   "engines": {
-    "node": ">= 0.8.0"
+    "node": ">= 0.10.26"
   },
   "scripts": {
     "test": "grunt"
@@ -33,8 +33,8 @@
   "devDependencies": {
     "grunt-contrib-jshint": "~0.1.1",
     "grunt-contrib-clean": "~0.4.0",
-    "grunt-contrib-nodeunit": "^0.3.3",
-    "grunt": "^0.4.4"
+    "grunt-contrib-nodeunit": "~0.3.3",
+    "grunt": "~0.4.4"
   },
   "keywords": [
     "faker",
